Replace language features available after Java 11