@@ -11,6 +11,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -67,6 +68,6 @@ public class PatternService {
       .filter(patternMatch -> patternMatch.getType()
         .getSide()
         .equals(side))
-      .toList();
+      .collect(Collectors.toList());
   }
 }
